<resources>
    <string name="app_name">webot</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <!--login activity-->
    <string name="loginMessage">지금 바로 위봇을 만나보세요! </string>
    <string name="id">Email</string>
    <string name="password">Password</string>
    <string name="newLogin">회원가입</string>
    <string name="gotoLogin">로그인하러 가기</string>

    <!--추가 사항-->
    <string name="input_message">메시지를 입력해주세요.</string>
    <string name="mainToolbar">WE Bot.</string>
    <string name="home">홈</string>
    <string name="content">심리노트</string>
    <string name="message">상담받기</string>
    <string name="more">더보기</string>

    <!-- 홈 프래그먼트 string -->
    <string name="startConsult">상담 시작</string>
    <string name="writeReview">리뷰 작성</string>
    <string name="counselingLetter">위봇으로 심리 상담을 받아 보세요.</string>
    <string name="gotoCounselor">지금 바로 위봇을 만나러 가보세요.</string>
    <string name="okButton">확인</string>

    <!-- 리뷰 폼 string -->
    <string name="profile">프로필</string>
    <string name="reviewWriteBtn">리뷰 등록</string>
    <string name="reviewHint">리뷰를 남겨 주세요.</string>
    <string name="review_rating_num">평점 :</string>
    <string name="review_like_num">좋아요 수:</string>

    <!-- missing contentDescription -->
    <string name="weBotMessage">위봇 메시지 아이콘</string>
    <string name="dot">점 3개</string>
    <string name="clock">시계</string>
    <string name="profileIcon">프로필 사진</string>
    <string name="nothing">없음</string>
    <string name="homework">과제</string>
    <string name="detail_type">종류</string>
    <string name="detail_content">내용</string>

    <!-- inform data-->
    <string name="stateUpdateButton">상태 변경</string>
    <string name="photoUpdateButton">사진 변경</string>
    <string name="loginButton">로그인</string>
    <string name="requireLogin">로그인이 필요합니다.</string>
    <string name="logout">로그 아웃</string>

    <!-- state toolbar-->
    <string name="stateMessage">상태 메시지</string>
    <string name="okMessage">확인</string>

    <!-- state message -->
    <string name="stateMessageShow">상태메시지를 입력해 주세요.</string>
    <string name="zeroLength">0/60</string>
    <string name="maxLength">/60</string>
r
    <string name="title_activity_main2">Main2Activity</string>

    <!-- note fragment-->
    <string name="noHomework">완료할 과제가 없습니다. \n 상담을 받아보세요.</string>
    <string name="type">인지 오류 종류</string>
    <string name="communication">마지막으로 나눈 대화</string>
    <string name="assignment">주어진 과제</string>

    <!-- my info fragment -->
    <string name="remove">삭제</string>
</resources>
