<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_block_border"
    android:orientation="vertical"
    android:padding="1dp">

    <!-- 여기에는 리뷰-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">


        <TextView
            android:id="@+id/review_userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/godom"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/review_user_uid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <TextView
            android:id="@+id/review_uid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/review_more"
            android:layout_width="48dp"
            android:layout_height="48sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/dot"
            android:src="@drawable/ic_more_horiz_black_24dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <ImageView
            android:id="@+id/review_timeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="13dp"
            android:contentDescription="@string/clock"
            android:src="@drawable/review_clock" />

        <TextView
            android:id="@+id/review_writtenTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/review_timeIcon"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/godom"
            android:gravity="center"
            android:textSize="12sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/review_contents"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:fontFamily="@font/godom"
        android:background="@drawable/bg_textview_border"
        android:gravity="center" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:id="@+id/review_rating_num"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/review_rating_num"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/review_rating"
            android:layout_width="101dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/review_rating_num"
            android:gravity="center"
            android:textSize="25sp" />

        <TextView
            android:layout_width="106dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/review_rating"
            android:gravity="center"
            android:text="@string/review_like_num"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/review_like"
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:textSize="25sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/review_likeBtn"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:contentDescription="@string/reviewWriteBtn"
            android:src="@drawable/ic_like_icon" />
    </LinearLayout>

</LinearLayout>